--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,10 @@
    
     .kk{
         font-size: 20px;
-        color: green;
+        color: red;
     }
     .mm{
-        font-size: 20px;
+        font-size: 30px;
     }
     .wh{
         font-size: 15px;
